--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "http-server": "^14.1.1"
   },
   "dependencies": {
+    "@capacitor-mlkit/barcode-scanning": "^8.0.0",
     "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0"
